// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected 1`] = `
<SelectButton
  increment={[Function]}
  price={
    Object {
      "amount": 100,
      "currency": "CZK",
    }
  }
/>
`;

exports[`renders as expected 2`] = `
<IncrementDecrement
  decrement={[Function]}
  increment={[Function]}
  price={
    Object {
      "amount": 100,
      "currency": "CZK",
    }
  }
  selectableCount={2}
  selectedCount={1}
/>
`;

exports[`renders as expected 3`] = `
<IncrementDecrement
  decrement={[Function]}
  increment={[Function]}
  price={
    Object {
      "amount": 100,
      "currency": "CZK",
    }
  }
  selectableCount={2}
  selectedCount={2}
/>
`;
